test/yaml/testdata/input/buffer/multiple-listeners.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: buffer-ingress
  namespace: namespace1
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  ingressClassName: nginx
  rules:
  - host: example.com
    http:
      paths:
      - path: /upload
        pathType: Prefix
        backend:
          service:
            name: service-ingress1
            port:
              number: 80
  tls:
  - hosts:
    - example.com
    secretName: tls-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: not-buffer-ingress
  namespace: namespace1
spec:
  ingressClassName: nginx
  rules:
  - host: test.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-ingress1
            port:
              number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: service-ingress1
  namespace: namespace1
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
